# brighter-e2e

./: CLAUDE.md  Makefile  conftest.py  pyproject.toml
.github/workflows/: checks.yml  e2e.yml
docs/: e2e-suite-completion-design.md
e2e/: bookings.py  config.py  http.py  properties.py  users.py
e2e/clients/: mailpit.py  stripe_hooks.py  subscriptions.py
scripts/: seed_admin.py
tests/: test_auth_flow.py  test_booking_cancellation_refund.py  test_booking_flow.py  test_clients.py  test_owner_subscription.py  test_payment_flow.py  test_payments_connect.py  test_property_lifecycle.py  test_smoke.py  test_traefik_routing.py
